[gd_scene load_steps=8 format=3 uid="uid://cw2r5gqa1w1ul"]

[ext_resource type="Script" path="res://levels/4/story2.gd" id="1_amvex"]
[ext_resource type="PackedScene" uid="uid://t1346vl8kt37" path="res://scenes/whole_scene.tscn" id="3_ccckg"]
[ext_resource type="PackedScene" uid="uid://801yunnbif45" path="res://characters/man_story.tscn" id="3_dknxh"]
[ext_resource type="Script" path="res://levels/3/camera_2d.gd" id="4_ut37a"]
[ext_resource type="PackedScene" uid="uid://cgcpl0ee6iilu" path="res://uis/components/speech_bubble.tscn" id="5_87466"]
[ext_resource type="PackedScene" uid="uid://dr3ghqee7tryj" path="res://objects/trap.tscn" id="5_e22mv"]
[ext_resource type="PackedScene" uid="uid://cfdub3r3ey8yj" path="res://characters/fairy_story.tscn" id="5_s3frf"]

[node name="Story" type="Node2D"]
script = ExtResource("1_amvex")

[node name="Fairy" parent="." instance=ExtResource("5_s3frf")]

[node name="Man" parent="." groups=["moving_objects"] instance=ExtResource("3_dknxh")]

[node name="WholeScene" parent="." node_paths=PackedStringArray("player_following_cam") instance=ExtResource("3_ccckg")]
position = Vector2(0, -2160)
player_following_cam = NodePath("../Camera2D")
wildnerness_revolution = 2

[node name="Trap" parent="." instance=ExtResource("5_e22mv")]

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position = Vector2(48000, 750)
zoom = Vector2(0.3, 0.3)
script = ExtResource("4_ut37a")
target = NodePath("../Man")
offset_y = 600.0

[node name="SpeechBubble" parent="." instance=ExtResource("5_87466")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Trap" to="." method="_on_trap_body_entered"]
